[package]
name = "dominion"
version = "0.1.0"
authors = ["Oliver Lee <oliverzlee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6.5"

[build-dependencies]
scraper = { path = "../scraper" }
serde_json = "1.0.39"
