cargo-features = ["default-run"]

[package]
name = "dominion"
version = "0.1.0"
authors = ["Oliver Lee <oliverzlee@gmail.com>", "Björn Andersson <andebjor@gmail.com>", "Mick van Gelderen <mickvangelderen@gmail.com>"]
edition = "2018"
default-run = "dominion"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6.5"
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0.39"

[build-dependencies]
scraper = { path = "../scraper" }
serde_json = "1.0.39"
quote = "0.6.12"
proc-macro2 = "0.4.30"
regex = "1.1.6"
